# harmonyc

./: .gitignore  .gitmodules  CMakeLists.txt  entry.cpp  memory.h  primitives.h
docs/pages/: Harmony Engine.md
harmony/: AssetManager.cpp  AssetManager.h  Assets.cpp  ECS.cpp  ECS.h  Json.h  Maths.h  STL.cpp  STL.h  Timer.h  Utils.cpp  Utils.h  VkTech.h  assets.h  engine.cpp  engine.h  entry.cpp  harmony_unity.cpp  macros.h  memory.h  primitives.h  stl_alias.h
tests/: CoreTests.cpp  EngineTests.cpp  HarmonyTest.h  MathsTests.cpp  core_tests.cpp  harmony_test.h  harmony_tests.cpp
